fix scrollbar

--- a/site/css/calendar-setup/calendar-setup.scss
+++ b/site/css/calendar-setup/calendar-setup.scss
@@ -242,7 +242,7 @@ main #day-container {
   }
 
   main .day .wrapper {
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: 7%;
     margin-top: 13%;
     margin-right: 5%;
